@@ -1,5 +1,11 @@
 2010-12-09  John W. Eaton  <jwe@octave.org>
 
+	* statistics/tests/kolmogorov_smirnov_test.m: Try both DIST_cdf
+	and DISTcdf functions.  Always use feval to call CDF function.
+	Bug #31838.
+
+2010-12-09  John W. Eaton  <jwe@octave.org>
+
 	* plot/__go_draw_axes__.m: Set major and grid linewidths from
 	axis linewidth property.
 
